
res_pjsip
------------------
 * A new SIP resolver using the core DNS API has been implemented. This relies on
   external SIP resolver support in PJSIP which is only available as of PJSIP
   2.4. If this support is unavailable the existing built-in PJSIP SIP resolver
   will be used instead. The new SIP resolver provides NAPTR support, improved
   SRV support, and AAAA record support.

CEL Backends
------------------

cel_pgsql
------------------
 * Added a new option, 'usegmtime', which causes timestamps in CEL events
   to be logged in GMT.

 * Added support to set schema where located the table cel. This settings is
   configurable for cel_pgsql via the 'schema' in configuration file
   cel_pgsql.conf.

CDR Backends
------------------

cdr_adaptive_odbc
------------------
 * Added the ability to set the character to quote identifiers. This
   allows adding the character at the start and end of table and column
   names. This setting is configurable for cdr_adaptive_odbc via the
   quoted_identifiers in configuration file cdr_adaptive_odbc.conf.


------------------------------------------------------------------------------
--- Functionality changes from Asterisk 13.5.0 to Asterisk 13.6.0 ------------
------------------------------------------------------------------------------

Dialplan Functions
------------------
 * The CHANNEL function, when used on a PJSIP channel, now exposes a 'call-id'
   extraction option when using with the 'pjsip' signalling option. It will
   return the SIP Call-ID associated with the INVITE request that established
   the PJSIP channel.

ARI
------------------
 * Two new endpoint related events are now available: PeerStatusChange and
   ContactStatusChange. In particular, these events are useful when subscribing
   to all event sources, as they provide additional endpoint related
   information beyond the addition/removal of channels from an endpoint.

 * Added the ability to subscribe to all ARI events in Asterisk, regardless